# mcp-cldkctl

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  development.md  howto.md  howtouse.md  note.txt  pyproject.toml  requirements.txt
mcp_cldkctl/: __init__.py  __main__.py  server.py  test.md  tool_param_map.py
